# amazon-freertos-examples

./: CMakeLists.txt  main.c
application_code/: main.c
config_files/: aws_clientcredential.h
src/: main.c
